--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,17 +2,24 @@
     background-image: url("../img/Hero.jpg");
     height: 500px;
     background-position: center;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
+}
+
+.profileLogo{
+    font-size: 50px;
+    color: white;
 }
 
 .boxnav{
     display: flex;
     justify-content: space-between;
+    height: 50px;
 }
 
 .navbar{
-    margin: 170px 700px;
+    width: 600px;
+    margin: 150px auto;
     padding: 25px;
     border: solid 1px black;
     border-radius: 50px;
@@ -25,9 +32,11 @@
 
 .link{
     color: white;
+    text-decoration: none;
+    font-weight: 700;
     position: relative;
     left: 30px;
-    /* padding: 0 20px; */
+    padding: 0 20px;
 }
 
 .searchButton{
@@ -37,6 +46,12 @@
     height: 21px;
     width: 21px;
     position: relative;
-    bottom: 25px; left: 53px;
+    bottom: 25px; left: 45px;
     background: linear-gradient(180deg, rgba(223,22,129,1) 0%, rgba(238,134,190,1) 100%);
+}
+
+.recherche{
+    font-size: 29px;
+    position: relative;
+    bottom: 4px; right: 4px;
 }
